Make header fixed on mobile

--- a/sections/Header/Header.module.css
+++ b/sections/Header/Header.module.css
@@ -5,6 +5,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 20;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  background-color: #ffffff;
 }
 
 .menuItems {
@@ -26,6 +32,7 @@
     padding: 2rem 3rem;
     flex-direction: row;
     justify-content: space-between;
+    position: static;
   }
 
   .logoContainer {
