--- a/sections/Hero/Hero.module.css
+++ b/sections/Hero/Hero.module.css
@@ -6,6 +6,7 @@
   align-items: flex-end;
   background: #e0dad5;
   height: 100%;
+  margin-top: 200px;
 }
 
 .heroMsg {
@@ -68,7 +69,9 @@
   .heroMsg > p {
     font-size: 1.5rem;
   }
-
+  .hero {
+    margin-top: 0;
+  }
   .actionButtonContainer {
     display: block;
   }
